--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-773.7KB/s(Youtube:不良林), server: 51.89.81.132, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.81.132}}
-  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.52MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.44MB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
-  - {name: 🇬🇧 英国-2.71MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.06MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇨🇳 中国-410.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-358.9KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-582.6KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-582.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇳🇱 荷兰-796.2KB/s(Youtube:不良林), server: 213.183.59.211, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇦 加拿大-424.7KB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-639.2KB/s(Youtube:不良林), server: 213.183.59.211, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-210.5KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-773.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-358.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-582.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-796.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-424.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-639.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-210.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
