--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-233.2KB/s(Youtube:不良林), server: values.pickaxe.sh, port: 443, type: trojan, password: PMQFH35hsbfi5tnw, sni: values.pickaxe.sh, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-231.7KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-251.6KB/s(Youtube:不良林), server: docs.defun.us, port: 443, type: trojan, password: WEMagdSekdGBxh6g, sni: docs.defun.us, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-228.0KB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-231.9KB/s(Youtube:不良林), server: 213.183.59.211, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
   - {name: 🇰🇷 韩国-201.1KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: wg.nfeng6.pp.ua, port: 52217, type: vmess, uuid: 4e66672a-184c-30e4-900a-a19004c38e85, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.82MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇦 加拿大-311.8KB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-202.1KB/s(Youtube:不良林), server: 213.183.59.211, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇳🇱 荷兰-214.4KB/s(Youtube:不良林), server: 213.183.59.211, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇳🇱 荷兰-209.8KB/s(Youtube:不良林), server: 213.183.59.190, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇳🇱 荷兰-201.2KB/s(Youtube:不良林), server: 213.183.59.211, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇳🇱 荷兰-227.7KB/s(Youtube:不良林), server: 213.183.59.190, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-231.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-201.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-311.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-202.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-214.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-201.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
