--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: d245a65e-da4c-11ec-97d7-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 未知国家-336.5KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇬🇧 英国-1.15MB/s(Youtube:不良林), server: 51.89.81.132, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.81.132}}
-  - {name: 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
   - {name: 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-206.8KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-4.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-712.4KB/s(Youtube:不良林)
-      - 未知国家-336.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-204.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-208.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-254.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
