--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,31 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.84MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 波兰-485.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 波兰-432.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇨🇳 中国-9.14MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -40,23 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-363.4KB/s(Youtube:不良林)
+      - 波兰-485.6KB/s(Youtube:不良林)
+      - 波兰-432.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
